# free-python-games

./: .gitignore  .pylintrc  .replit  .travis.yml  Battlefield  LICENSE  MANIFEST.in  Platform_Scroller.py  README.rst  Rollling_dice.py  SketchyCalculator.py  appveyor.yml  automaton.py  bagels.py  cannon.py  connect.py  crypto.py  cups.py  flappy.py  guess.py  hangman.py  jsnake.html  jsnake.js  jsnake.py  maze.py  memory.py  nibbles.es6.js  nibbles.html  nibbles.js  nibbles.py  notes.org  pacman.py  paint.py  pong.py  pygame_to_js.js  pygame_to_js.py  pygame_to_js_library.js  pygame_to_js_server.py  pygame_to_js_worker.js  pyproject.toml  (+13 more)
Shooting_Bunny/: README.md  ShootingBunny.py
docs/: Makefile  ant.rst  api.rst  avoid.rst  bagels.rst  bounce.rst  cannon.rst  conf.py  connect.rst  crypto.rst  curriculum.rst  demo.py  development.rst  fidget.rst  flappy.rst  give-gift-python.rst  guess.rst  hangman.rst  illusion.rst  index.rst  lesson-plan.rst  life.rst  madlibs.rst  make.bat  maze.rst  memory.rst  minesweeper.rst  pacman.rst  paint.rst  pong.rst  requirements-doc.txt  rps.rst  simonsays.rst  snake.rst  snake_oop.rst  tictactoe.rst  tiles.rst  tron.rst  typing.rst
freegames/: Blackjack.py  FLAMES game  Hangman_wordbank.txt  Number Guessing Game  Rock paper scissor.py  __init__.py  __main__.py  ant.py  avoid.py  bagels.py  baseball.py  battleship.py  bounce.py  cannon.py  connect.py  crypto.py  cups.py  dice.py  fidget.py  flappy.py  guess.py  hangman.py  illusion.py  lesson-plan.rst  life.py  madlibs.py  matching(GUI).py  maze.py  memory.py  minesweeper.py  overlap.py  pacman.py  pacman_oop.py  (+15 more)
(+120 files in other folders)
